--- a/package.json
+++ b/package.json
@@ -19,19 +19,25 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "bootstrap": "^4.4.1",
     "rxjs": "~6.4.0",
+    "sass-rem": "^2.0.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.24",
+    "@angular/cdk": "^8.2.3",
     "@angular/cli": "~8.3.24",
     "@angular/compiler-cli": "~8.2.14",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "i": "^0.3.6",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -39,6 +45,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "npm": "^6.13.7",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
