--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.4.1",
+    "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "sass-rem": "^2.0.1",
     "tslib": "^1.10.0",
@@ -32,6 +34,7 @@
     "@angular/compiler-cli": "~8.2.14",
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/language-service": "~8.2.14",
+    "@angular/material-moment-adapter": "^8.2.3",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
